<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MotionApp</string>
    <string name="action_settings">Settings</string>
    <string name="run">Run </string>
    <string name="edit">Edit</string>
    <string name="deletemode">Delete Mode</string>
    <string name="reviewmode">Review Mode</string>
    <string name="done">Done</string>
    <string name="tabs">Tab Icon</string>
    <string name="review">Review</string>
    <string name="delete">Delete</string>
    <string name="nc_comp">Comp.</string>
    <string name="s_time">Start Time </string>
    <string name="duration">Duration</string>
    <string name="time">Time</string>
    <string name="mode">Mode</string>
    <string name="filedeleted">File deleted!</string>
    <string name="name">Name</string>
    <string name="sample_count">Sample Counts</string>
    <string name="gps">GPS</string>
    <string name="settingbtn">Settings</string>
    <string name="accel">Accel.</string>
    <string name="gps_sample">Context Only</string>
    <string name="frequency_sample">0</string>
    <string name="c_accel">Accelerometers</string>
    <string name="comp">Compass</string>
    <string name="gyro">Gyro.</string>
    <string name="c_gyro">Gyroscopes</string>
    <string name="cloud">CloudThink</string>
    <string name="l_reading">Last Readings</string>
    <string name="checkin">CHECK-IN</string>
    <string name="l_checkin">Check-in</string>
    <string name="gps_qual">GPS Qual.</string>
    <string name="position">Position</string>
    <string name="heading">Heading</string>
    <string name="rotation">Rotation</string>
    <string name="record"> Record </string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="details">Details</string>
    <string name="summery">Summary</string>
    <string name="sensor">Sensors</string>
    <string name="sample_frequency">Sample Frequency</string>
    <string name="broadcast">FTP Capture Server</string>
    <string name="tcpbroadcast">TCP Capture Server</string>
    <string name="f_name">FTP Name</string>
    <string name="tcp_user">User ID</string>
    <string name="f_name_sample">23.23.126.78</string>
    <string name="ftp">FTP</string>
    <string name="tcp">TCP</string>
    <string name="f_pass">FTP Pass</string>
    <string name="f_user">FTP User</string>
    <string name="f_port">FTP Port</string>
    <string name="tcp_port">TCP Port</string>
    <string name="tcp_name">Server Address</string>
    <string name="f_pass_sample">password</string>
    <string name="f_user_sample">j_siegel</string>
    <string name="f_port_sample">21</string>
    <string name="email">Email</string>
    <string name="setting">Settings</string>
    <string name="adress">Address</string>
    <string name="email_id">j_siegel@mit.edu</string>
    <string name="name_sample">Unnamed Recording</string>
    <string name="time_sample">04&#8211;26&#8211;2014 11:13AM</string>
    <string name="dur_sample">58:07</string>
    <string name="vin_num">VIN (CT)</string>
    <string name="vinnumber">W04G15GV9B1109087</string>
    <string name="hz">Hz</string>

</resources>