<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainlayout" 
    android:background="@drawable/bg" >
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/header_bg"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >

        <Button
            android:id="@+id/header_leftBtn"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:paddingLeft="10dp"
            android:background="@drawable/leftbtn_selector"
            android:clickable="true"
            android:text="@string/review"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/headerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/delete"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
    <LinearLayout
        android:id="@+id/innerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" >
        <!--Sensor Block -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:paddingLeft="10dp"
            android:text="@string/filedeleted"
            android:textColor="#566D7E"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="1dp"
            android:background="@drawable/top_edittext"
            >

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="right"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                 android:id="@+id/record_nameTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/nameTv"
                 android:text="@string/name_sample"
                 android:paddingLeft="8dp"
                 android:textColor="#000000"
                 android:textStyle="bold"
                 android:textSize="17sp" />
            
			<ImageView
                android:id="@+id/name_nextIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/details"
                android:src="@drawable/ic_action_next_item" />
            
        </RelativeLayout>
        <LinearLayout
                android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:gravity="center"
		        android:layout_marginTop="10dp" >
           </LinearLayout>
        </LinearLayout>
        
        </ScrollView>
    </RelativeLayout>