<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/header_bg"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/header_leftBtn"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/leftbtn_selector"
            android:clickable="true"
            android:paddingLeft="10dp"
            android:text="@string/review"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/headerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/details"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header" >

        <LinearLayout
            android:id="@+id/innerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <!-- Sensor Block -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:paddingLeft="10dp"
                android:text="@string/summery"
                android:textColor="#566D7E"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_edittext"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="1dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/nameTv"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:text="@string/name"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/record_nameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/nameTv"
                    android:paddingLeft="8dp"
                    android:text="@string/name_sample"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/name_nextIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/details"
                    android:src="@drawable/ic_action_next_item" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/middle_edittext"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/timeTv"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:text="@string/time"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/record_timeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/timeTv"
                    android:paddingLeft="8dp"
                    android:text="@string/time_sample"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_edittext"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/durTv"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:text="@string/duration"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/record_durationTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/durTv"
                    android:paddingLeft="5dp"
                    android:text="@string/dur_sample"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:text="@string/sensor"
                android:textColor="#566D7E"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_edittext"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="1dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/gpsTv"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:text="@string/gps"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/gps_indcIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/gpsTv"
                    android:contentDescription="@string/details"
                    android:src="@drawable/greenbtn" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/middle_edittext"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="1dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/accelTv"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:text="@string/accel"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/accel_indcIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/accelTv"
                    android:contentDescription="@string/details"
                    android:src="@drawable/greenbtn" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/middle_edittext"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="1dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/gyroTv"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:text="@string/gyro"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/gyro_indcIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/gyroTv"
                    android:contentDescription="@string/details"
                    android:src="@drawable/greenbtn" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_edittext"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="1dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/compTv"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:text="@string/comp"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/comp_indcIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/compTv"
                    android:contentDescription="@string/details"
                    android:src="@drawable/greenbtn" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/emailbtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/rightbtn_selector"
                    android:text="@string/email"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/ftpbtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/rightbtn_selector"
                    android:text="@string/ftp"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/tcpbtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/rightbtn_selector"
                    android:text="@string/tcp"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>